--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -46,7 +46,14 @@ jobs:
           IMAGE_TAG: ${{ github.sha }}
         id: docker
         run: |
-          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG \
+          --build-arg AWS_ELASTICACHE_REDIS_ENDPOINT=${{ secrets.AWS_ELASTICACHE_REDIS_ENDPOINT }} \
+          --build-arg AWS_ELASTICACHE_REDIS_WITH_SSL="true" \
+          --build-arg ENVIRONMENT=${{ inputs.environment }} \
+          --build-arg POSTGRESQL_PASSWORD=${{ secrets.POSTGRESQL_PASSWORD }} \
+          --build-arg POSTGRESQL_URL=${{ secrets.POSTGRESQL_URL }} \
+          --build-arg POSTGRESQL_USERNAME=${{ secrets.POSTGRESQL_USERNAME }} .
+          
           docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
           echo "image=$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG" >> $GITHUB_OUTPUT
 
