--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -63,13 +63,13 @@ jobs:
             --filters "Name=tag:Category,Values=application" "Name=tag:Name,Values=java-app-instance*" \
             --query "Reservations[*].Instances[*].InstanceId" \
             --output text)
-          
+
           IMAGE_URI="${{ steps.docker.outputs.image }}"
           
           echo "${{ secrets.EC2_SSH_KEY_PEM }}" > ec2_key.pem
           chmod 600 ec2_key.pem
           
-          for INSTANCE_ID in "${INSTANCE_IDS[@]}"; do
+          for INSTANCE_ID in $INSTANCE_IDS; do
             echo "Updating instance $INSTANCE_ID..."
             ssh -o StrictHostKeyChecking=no -i "ec2_key.pem" ec2-user@$INSTANCE_ID << 'EOF'
               ./setup.sh
@@ -80,5 +80,4 @@ jobs:
             EOF
           done
           
-          # Clean up the temporary PEM file
           rm ec2_key.pem
