--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -59,25 +59,27 @@ jobs:
 
       - name: Update EC2 instances
         run: |
-          INSTANCE_IDS=$(aws ec2 describe-instances \
-            --filters "Name=tag:Category,Values=application" "Name=tag:Name,Values=java-app-instance*" \
-            --query "Reservations[*].Instances[*].InstanceId" \
-            --output text)
+          INSTANCE_IDS=$(aws ec2 describe-instances --filters "Name=tag:Category,Values=application" "Name=tag:Name,Values=java-app-instance*" --query "Reservations[*].Instances[*].InstanceId" --output text)
+          
+          echo "Instance IDs: $INSTANCE_IDS"
 
           IMAGE_URI="${{ steps.docker.outputs.image }}"
           
+          echo "IMAGE_URI: $INSTANCE_IDS"
+          
           echo "${{ secrets.EC2_SSH_KEY_PEM }}" > ec2_key.pem
+          
           chmod 600 ec2_key.pem
           
-          for INSTANCE_ID in $INSTANCE_IDS; do
-            echo "Updating instance $INSTANCE_ID..."
-            ssh -o StrictHostKeyChecking=no -i "ec2_key.pem" ec2-user@$INSTANCE_ID << EOF
-              ./setup.sh
-              docker pull $IMAGE_URI
-              docker stop address_api || true
-              docker rm address_api || true
-              docker run --name address_api -d -p 8080:8080 $IMAGE_URI
-            EOF
-          done
-          
           rm ec2_key.pem
+          
+#          for INSTANCE_ID in $INSTANCE_IDS; do
+#            echo "Updating instance $INSTANCE_ID..."
+#            ssh -o StrictHostKeyChecking=no -i "ec2_key.pem" ec2-user@$INSTANCE_ID << EOF
+#              ./setup.sh
+#              docker pull $IMAGE_URI
+#              docker stop address_api || true
+#              docker rm address_api || true
+#              docker run --name address_api -d -p 8080:8080 $IMAGE_URI
+#            EOF
+#          done
