--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -67,7 +67,7 @@ jobs:
           
           echo "IMAGE_URI: $IMAGE_URI"
           
-          echo "${{ secrets.EC2_SSH_KEY_PEM }}" > ec2_key.pem
+          echo "${{ secrets.EC2_SSH_KEY_PEM }}" > ec2.pem
           
           chmod 600 ec2.pem
           
